<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
    android:background="@drawable/background_inicio_sesion"
    android:id="@+id/login_layout"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo_prefiero"
        android:layout_above="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login_explicacion"
        android:textColor="@color/negro_prefiero"
        android:id="@+id/textView"
        android:layout_above="@+id/txtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="15"
        android:gravity="center"
        android:textColor="@color/negro_prefiero"
        android:id="@+id/txtEmail"
        android:hint="@string/login_txt_email"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="15"
        android:gravity="center"
        android:textColor="@color/negro_prefiero"
        android:id="@+id/txtPass"
        android:hint="@string/login_txt_pw"
        android:layout_below="@+id/txtEmail"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn_ingresar"
        android:id="@+id/button"
        android:textColor="#ffffff"
        android:background="@color/amarillo_prefiero"
        android:layout_below="@+id/txtPass"
        android:layout_alignLeft="@+id/txtPass"
        android:layout_alignStart="@+id/txtPass"
        android:layout_alignRight="@+id/txtPass"
        android:layout_alignEnd="@+id/txtPass"
        android:onClick="onClickLogin" />



</RelativeLayout>