<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/gallery_thumb">

    <TextView android:id="@+id/txt_titulo_categoria"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/msg_titulo_slide_contenido"/>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_margin="10dp"
        android:layout_weight="1">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:id="@+id/imagen_contenido"
            android:src="@drawable/icon_oh"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/msg_titulo_null"
            android:textColor="#999999"
            android:id="@+id/txt_titulo_contenido"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/imagen_contenido"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/msg_descripcion_null"
            android:id="@+id/txt_precio_contenido"
            android:gravity="center"
            android:textColor="#999999"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="12dp"
            android:layout_below="@+id/txt_titulo_contenido"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</LinearLayout>