<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.permify.yoprefiero.PerfilFragment"
    android:rowCount="3"
    android:columnCount="3">

    <!--<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->
    <com.permify.yoprefiero.EdgeEffectViews.ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:edgeeffect_color="@color/amarillo_prefiero">

        <RelativeLayout
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:inputType="textCapWords"
                android:id="@+id/relativeLayout">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/logo_prefiero"
                    android:id="@+id/img_usuario"
                    android:adjustViewBounds="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:hint="@string/perfil_txt_nombre"
                    android:singleLine="true"
                    android:gravity="center"
                    android:id="@+id/txt_nombre_usuario"
                    android:layout_below="@+id/img_usuario"
                    android:layout_centerHorizontal="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/perfil_hint_nombre"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/negro_prefiero"
                    android:ems="15"
                    android:nextFocusDown="@+id/txt_edit_apellido"
                    android:id="@+id/txt_edit_nombre"
                    android:visibility="invisible"
                    android:gravity="center"
                    android:layout_alignBaseline="@+id/txt_nombre_usuario"
                    android:layout_alignBottom="@+id/txt_nombre_usuario"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/perfil_hint_apellido"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:ems="15"
                    android:gravity="center"
                    android:nextFocusDown="@+id/cmb_comunas"
                    android:id="@+id/txt_edit_apellido"
                    android:visibility="gone"
                    android:layout_below="@+id/txt_edit_nombre"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/perfil_txt_region"
                    android:id="@+id/txt_ciudad_usuario"
                    android:gravity="center"
                    android:singleLine="true"
                    android:layout_marginTop="15dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/txt_edit_apellido" />

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/cmb_comunas"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:visibility="invisible"
                    android:nextFocusDown="@+id/txt_edit_fono"
                    android:spinnerMode="dialog"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/txt_edit_apellido" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_subir_imagen"
                    android:visibility="invisible"
                    android:onClick="onClickCambiarImagen"
                    android:src="@drawable/ic_foto"
                    android:layout_toRightOf="@+id/img_usuario"
                    android:layout_toEndOf="@+id/img_usuario" />

            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/relativeLayout"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/perfil_titulo_datos"
                    android:textColor="@color/negro_prefiero"
                    android:layout_gravity="center_horizontal" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="1dp"
                    android:background="@color/negro_prefiero"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:baselineAligned="true"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img_fono_usuario"
                        android:src="@drawable/ic_cel" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/img_fono_usuario"
                        android:hint="@string/perfil_txt_telefono"
                        android:id="@+id/txt_fono_usuario"
                        android:layout_marginLeft="10dp"
                        />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/txt_edit_fono"
                        android:layout_weight="1"
                        android:hint="@string/perfil_hint_telefono"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/img_email_usuario"
                        android:src="@drawable/ic_mail" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/img_email_usuario"
                        android:hint="E-mail de usuario"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/txt_email_usuario" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linearLayout"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/perfil_titulo_categorias"
                    android:textColor="@color/negro_prefiero"
                    android:layout_marginLeft="10dp" />

                <View
                    android:layout_width="fill_parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_height="1dp"
                    android:background="@color/negro_prefiero"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/lista_categorias"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical" />


            </LinearLayout>
        </RelativeLayout>
    <!--</ScrollView>-->
    </com.permify.yoprefiero.EdgeEffectViews.ScrollView>
</RelativeLayout>